# CTRTC

./: .gitignore  CMakeLists.txt  Makefile  README.md
docker/: Dockerfile  build.sh  run.sh
include/: camera.hh  canvas.hh  primitives.hh  ray.hh  shading.hh  shape.hh  transform.hh  world.hh
include/primitives/: dynamic_vector.hh  matrix.hh  primitive_traits.hh  static_base.hh  static_vector.hh  vec.hh
include/utils/: math.hh
scene/: CMakeLists.txt  clock.cc  pattern.cc  plane.cc  scene.cc  silhouette_sphere.cc  sphere_on_wall.cc
test/: CMakeLists.txt  Test_matrix.cc  Test_vec.cc  test_camera.cc  test_canvas.cc  test_intersection.cc  test_math.cc  test_matrix.cc  test_pattern.cc  test_ray.cc  test_shading.cc  test_shape.cc  test_static_vector.cc  test_transform.cc  test_vec.cc  test_world.cc
